barebones-nginx/external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${NAME}-external
  annotations:
    kubernetes.io/ingress.class: "nginx-external"
spec:
  tls:
    - hosts:
        - ${NAME}.aleemhaji.com
      secretName: external-certificate-files
  rules:
    - host: ${NAME}.aleemhaji.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${NAME}
                port:
                  number: 80
